--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+repository: mylesotoole/mylesotoole.dev
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
