--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   description.
 #twitter_username: username
 #github_username: username
-minimal_mistakes_skin: dark
+minimal_mistakes_skin: neon
 search: true
 
 # Build settings
