--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,5 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Guides"
+    url: /guides/
   - title: "About"
     url: /about/
