--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-title: "/assets/images/bio-photo.jpg" Myles O'Toole
+title: Myles O'Toole
+logo: "/assets/images/bio-photo.jpg"
 #email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this line in _config.yml. It
