--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 # Site settings
 title: Myles O'Toole
-logo: "/assets/images/logo.png"
+#logo: "/assets/images/logo.png"
 #email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this line in _config.yml. It
-  will appear in your document head meta (for Google search results) and in your feed.xml site
-  description.
+  Operating system guides and more.
 minimal_mistakes_skin: neon
 search: true
 
