--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Myles O'Toole
-#logo: "/assets/images/logo.png"
+logo: "/assets/images/logo.png"
 #email:
 description: >- # this means to ignore newlines until "baseurl:"
   Operating system guides and more.
