--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo: "/assets/images/logo.png"
 #email:
 description: >- # this means to ignore newlines until "baseurl:"
   Operating system guides and more.
-minimal_mistakes_skin: neon
+minimal_mistakes_skin: dirt
 search: true
 
 # Build settings
