--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: Myles O'Toole
 logo: "/assets/images/logo.png"
-#email:
 description: >- # this means to ignore newlines until "baseurl:"
   Operating system guides and more.
-#minimal_mistakes_skin: dark
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
@@ -27,17 +26,6 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
-
-# author:
-#   name: "Myles O'Toole"
-#   avatar: "/assets/images/bio-photo.jpg"
-#   bio: "My awesome biography constrained to a sentence or two goes here."
-#   links:
-#     - label: "Website"
-#       icon: "fas fa-fw fa-link"
-#     - label: "GitHub"
-#       icon: "fab fa-fw fa-github"
-#       url: "https://github.com/"
 
 defaults:
   # _posts
